Bug 161086 - bitmap image transforms itself depending on position on a page - SVG with an embedded PNG
Summary: bitmap image transforms itself depending on position on a page - SVG with an ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0 target:24.2.5 target:24...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2024-05-15 12:17 UTC by Petr Špaček
Modified: 2024-07-01 14:13 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
problematic SVG with PNG embeded in it (243.71 KB, image/svg+xml)
2024-05-15 12:17 UTC, Petr Špaček
Details
screenshot: SVG insterted into default position in Writer (60.43 KB, image/png)
2024-05-15 12:17 UTC, Petr Špaček
Details
screenshot: SVG moved into a second position in Writer (64.44 KB, image/png)
2024-05-15 12:18 UTC, Petr Špaček
Details
screenshot: SVG moved into a third position in Writer (62.85 KB, image/png)
2024-05-15 12:18 UTC, Petr Špaček
Details
screenshot: SVG rendered by Firefox 125.0.3 (17.26 KB, image/png)
2024-05-15 12:18 UTC, Petr Špaček
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Petr Špaček 2024-05-15 12:17:11 UTC
Created attachment 194128 [details]
problematic SVG with PNG embeded in it

### Summary
Moving an SVG image - which entirely consists of an embedded PNG - causes absolutely weird bitmap transformation. The rendered image matches the PNG but it shifts along X and Y axes depending on position of the image on page. It affects Writer, Draw, and Impress as well. I have not tested other applications.

I'm attaching the problematic image and couple screenshots.

I've checked all open bugs which mention SVG _and_ PNG but they do not describe this particular problem. Bug 87450 sounded like it might be related but attachments from that bug does not behave in this strange way on my system.


### Steps to reproduce
1. Open an empty document
2. Insert attached image fido.a6ac42db6649.svg
3. Move the image to several different places on the same page and observe changes


### Versions tested
Version: 24.2.3.2 (X86_64) / LibreOffice Community
Build ID: 420(Build:2)
CPU threads: 8; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (en_US.UTF-8); UI: en-US
24.2.3-1
Calc: threaded

Version: 24.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 658a212585c56540a17c41111e6829716d4ef4e3
CPU threads: 8; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Petr Špaček 2024-05-15 12:17:40 UTC
Created attachment 194129 [details]
screenshot: SVG insterted into default position in Writer
Comment 2 Petr Špaček 2024-05-15 12:18:05 UTC
Created attachment 194130 [details]
screenshot: SVG moved into a second position in Writer
Comment 3 Petr Špaček 2024-05-15 12:18:20 UTC
Created attachment 194131 [details]
screenshot: SVG moved into a third position in Writer
Comment 4 Petr Špaček 2024-05-15 12:18:53 UTC
Created attachment 194132 [details]
screenshot: SVG rendered by Firefox 125.0.3
Comment 5 m_a_riosv 2024-05-15 16:35:50 UTC
Reproducible
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 47664e282da4999b8e471a6a916d7ec80414ac18
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 22631); UI render: default; VCL: win Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded

On what I have installed, begins with:
Version: 7.4.7.2 (x64) / LibreOffice Community
Build ID: 723314e595e8007d3cf785c16538505a1c878ca5
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: CL

Last working for me:
Version: 7.2.7.2 (x64) / LibreOffice Community
Build ID: 8d71d29d553c0f7dcbfa38fbfda25ee34cce99a2
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL


While moving the image it showed fine.
And it is shown fine in page pane.
Comment 6 raal 2024-05-16 17:17:46 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-7.3.
Adding Cc: to Noel Grandin ; Could you possibly take a look at this one?
Thanks
 be530ff5d47efa2621ab40f02909e74f733106f4 is the first bad commit
commit be530ff5d47efa2621ab40f02909e74f733106f4
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri Aug 27 09:03:59 2021 +0200

    source 3cbe3a0259bea4dec70e72191ec3c03441926a07

117162: tdf#101083 speed up SVG rendering with pattern fill | https://gerrit.libreoffice.org/c/core/+/117162
Comment 7 Commit Notification 2024-06-21 16:25:17 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7b807a6b793198c00db9b2c2c3a5eb3ebfe16ad9

tdf#161086 bitmap location wrong with SVG with an embedded PNG

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-06-27 14:58:31 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/d53191ebf73a70f63b4740bf8c85e023fdb8eb37

tdf#161086 bitmap location wrong with SVG with an embedded PNG

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-07-01 14:13:00 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/12430a56f636f88be775b0fa8979cbb915a4cd23

tdf#161086 bitmap location wrong with SVG with an embedded PNG

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.