tdf#161086 bitmap location wrong with SVG with an embedded PNG

we need to transform the location of the wallpaper rect to match where
we want the wallpaper to start tiling from.

regression from
    commit 3cbe3a0259bea4dec70e72191ec3c03441926a07
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Mon Jun 14 15:05:59 2021 +0200
    tdf#101083 speed up SVG rendering with pattern fill

Change-Id: I624edd63135875fdc9526015f0f5642d5c694934
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169332
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 7b807a6b793198c00db9b2c2c3a5eb3ebfe16ad9)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169444
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>